fix: Make hr element visible in prose

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,7 @@
   --tw-prose-bold: var(--color-blue);
   --tw-prose-counters: var(--color-foreground);
   --tw-prose-bullets: var(--color-foreground);
-  --tw-prose-hr: var(--color-black);
+  --tw-prose-hr: var(--color-blue);
   --tw-prose-quotes: var(--color-foreground);
   --tw-prose-quote-borders: var(--color-blue);
   --tw-prose-captions: var(--color-foreground);
